--- a/timer.html
+++ b/timer.html
@@ -4,6 +4,7 @@
   <title> timer sample</title>
 </head>
 <body>
+  これはタイマーです
 <p>
    <input type="button" value="カウント開始" id="startcount" >
    <input type="button" value="カウント停止" id="endcount">
