--- a/timer.html
+++ b/timer.html
@@ -9,7 +9,7 @@
    <input type="button" value="カウント開始" id="startcount" >
    <input type="button" value="カウント停止" id="endcount">
 </p>
-<p id="PassageArea">(ここにカウントが表示されます)</p>
+<p id="PassageArea">(ここにカウントが表示されます)津田梅子</p>
    <script src="timer.js" defer async></script>
 </body>
 </html>
